fix button width on small screens

--- a/css/launchcircle.css
+++ b/css/launchcircle.css
@@ -544,7 +544,7 @@ body.ge .modal-body form:before {
     letter-spacing: 1px;
 }
 
-@media screen and (max-width: 390px) {
+@media screen and (max-width: 450px) {
     main .btn, footer .btn {
         max-width: 78.5vw;
         white-space: nowrap;
